src/Themes/KrakeAdmin/Styles/krakeadmin.css
/* ... */
a.text-primary:hover {
    color: #077871;
}

.text-primary-dark {
    color: #066265;
}

a.text-primary-dark:hover {
    color: #033334;
}

.text-accent-bright {
    color: #e9c9ef;
}

a.text-accent-bright:hover {
    color: #d9a1e3;
}

.text-accent-light {
    color: #c77bd4;
}

a.text-accent-light:hover {
    color: #b755c8;
}

.text-accent {
    color: #9c27b0;
}

a.text-accent:hover {
    color: #771e86;
}

.text-accent-dark {
    color: #681a7f;
}

a.text-accent-dark:hover {
    color: #461155;
}

.text-info {
    color: #2196f3;
}

a.text-info:hover {
    color: #0c7cd5;
}

.text-warning {
    color: #ff9800;
}

a.text-warning:hover {
    color: #cc7a00;
}

.text-danger {
    color: #f44336;
}

a.text-danger:hover {
    color: #ea1c0d;
}

.text-success {
    color: #4caf50;
}

a.text-success:hover {
    color: #3d8b40;
}

#base {
    overflow: hidden;
    padding-left: 64px;
    width: 100%;
    min-height: 100%;
}

    #base > .backdrop {
        position: fixed;
        z-index: 131;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        display: block;
        background-color: rgba(12, 12, 12, 0.33);
    }

    #base.hide-backdrop > .backdrop {
        display: none;
        position: relative;
    }

#layout-main {
    /*position: relative;*/
    width: 100%;
    left: 0;
    padding-top: 14px;
}


#content {
    width: 100%;
    left: 0;
    padding-top: 14px;
    background: #ffffff none repeat scroll 0 0;
    border-radius: 3px;
    border-top: 3px solid #de625e;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    /*position: relative;*/
    width: 100%;
    border-top-color: #ee726f;
}

.logo-icon {
    display: none;
}

.logo-icon-minimized {
    display: initial;
}


.menubar-visible .logo-icon {
    display: initial;
}

.menubar-visible .logo-icon-minimized {
    display: none;
}

@media (min-width: 1200px) {
    .menubar-pin #base {
        padding-left: 240px;
    }

    .menubar-pin .logo-icon {
        display: initial;
    }

    .menubar-pin .logo-icon-minimized {
        display: none;
    }

    /*.menubar-visible .logo-icon-minimized {
        display: initial;
    }

     .menubar-visible .logo-icon {
        display: none;
    }*/

}

@media (min-width: 769px) {
    .full-content #base,
    .full-content #content {
        height: 100%;
    }
}

@media (max-width: 768px) {
    #base {
        padding-left: 0;
        padding-right: 0;
    }
}

#header {
    position: absolute;
    left: 0;
    right: 0;
    height: 64px;
    z-index: 1000;
    background: #ffffff;
    color: rgba(49, 53, 52, 0.6);
    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
}

.header-fixed #header {
    position: fixed;
}

.no-sidebar #header {
    right: 12px;
}

.headerbar {
    position: relative;
    min-height: 64px;
}

    .headerbar:before,
    .headerbar:after {
        content: " ";
        display: table;
    }

    .headerbar:after {
        clear: both;
    }

    .headerbar .navbar-devider {
        display: block;
        width: 20px;
        height: 5px;
    }

.headerbar-left {
    position: absolute;
}

    .headerbar-left a {
        float: left;
    }

    .headerbar-left .header-nav {
        margin-left: 0px;
    }

.headerbar-right {
    float: right;
}

    .headerbar-right .header-nav {
        display: inline-block;
        float: left;
    }

    .headerbar-right .dropdown-menu {
        left: auto;
        right: 0;
    }

    .headerbar-right .header-nav-toggle {
        margin-left: 0;
    }

.header-nav {
    margin: 0 12px;
    padding-left: 0;
    list-style: none;
}

    .header-nav > li {
        position: relative;
        display: block;
        padding: 14px 0 14px 12px;
        float: left;
    }

        .header-nav > li:first-child {
            padding-left: 0;
        }

        .header-nav > li > a {
            position: relative;
            display: block;
            margin-top: 6px;
        }

            .header-nav > li > a:hover,
            .header-nav > li > a:focus {
                text-decoration: none;
                background-color: rgba(12, 12, 12, 0.07);
            }

        .header-nav > li.disabled > a {
            color: #969c9c;
        }

            .header-nav > li.disabled > a:hover,
            .header-nav > li.disabled > a:focus {
                color: #969c9c;
                text-decoration: none;
                background-color: transparent;
                cursor: not-allowed;
            }

    .header-nav .open > a,
    .header-nav .open > a:hover,
    .header-nav .open > a:focus {
        background-color: #e5e6e6;
        border-color: #00ccff;
    }

    .header-nav > li > a > img {
        max-width: none;
    }

    .header-nav .btn-icon-toggle:hover {
        background-color: rgba(12, 12, 12, 0.07);
    }

    .header-nav .navbar-search {
        float: right;
    }

    .header-nav .header-nav-brand {
        display: inline-table;
        padding: 0;
        height: 64px;
    }

        .header-nav .header-nav-brand .brand-holder {
            display: table-cell;
            padding-left: 33px;
            padding-top: 15px;
            vertical-align: middle;
        }

        .header-nav .header-nav-brand a {
            text-decoration: none;
        }

        .header-nav .header-nav-brand img {
            max-height: 48px;
        }

.header-nav-profile .dropdown {
    padding: 0;
}

    .header-nav-profile .dropdown > a {
        position: relative;
        min-height: 64px;
        min-width: 210px;
        padding: 16px;
        border-left: 1px solid transparent;
        border-right: 1px solid transparent;
    }
/* ... */

